# flow-life

./: .gitignore  pyproject.toml
docs/: data.json
docs/assets/: app.js  style.css
orbits/001-multichannel-competitive/: generate_figures.py  log.md
orbits/001-multichannel-competitive/solution/: README.md  run.py  substrate.py
orbits/002-chemotaxis-fission/: log.md
orbits/002-chemotaxis-fission/solution/: README.md  run.py  substrate.py
orbits/003-rd-morphogen/: log.md
orbits/003-rd-morphogen/solution/: README.md  run.py  searcher.py  substrate.py
orbits/004-uncapped-fission-searcher/: log.md
orbits/004-uncapped-fission-searcher/solution/: run.py  substrate.py
orbits/005-rd-morphogen-uncapped/: generate_figures.py  log.md
orbits/005-rd-morphogen-uncapped/solution/: README.md  run.py  searcher.py  substrate.py
orbits/006-heredity-morphogen/: log.md
orbits/006-heredity-morphogen/solution/: run.py  substrate.py
orbits/007-strong-texture-heredity/: log.md
orbits/007-strong-texture-heredity/solution/: run.py  substrate.py
orbits/008-daughter-bootstrap-ic/: log.md
orbits/008-daughter-bootstrap-ic/solution/: run.py  substrate.py
orbits/009-seed1-fission-fix/: log.md
orbits/009-seed1-fission-fix/solution/: run.py
orbits/010-montecarlo-ic/: log.md
orbits/010-montecarlo-ic/solution/: run.py
orbits/011-deterministic-ic/: log.md
orbits/012-daughter-phase-heredity/: log.md
orbits/013-tier3-selfrepair-push/: log.md
research/: config.yaml  problem.md
research/eval/: config.yaml  evaluator.py  hardware.md  metric_provenance.md  modal_app.py  problem_spec.md  protocol.md
(+7 files in other folders)
