[project]
name = "artificial-life"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyyaml>=6",
    "matplotlib>=3.8",
    # TODO: add domain-specific packages. Add here AND they will be picked up
    # by the Modal image automatically (see research/eval/modal_app.py).
    #
    # ML / deep learning:
    #   "torch>=2.3",
    #   "torchvision",
    #   "transformers>=4.40",
    #   "datasets>=2.19",
    #
    # Image generation / evaluation:
    #   "clean-fid>=0.1.35",       # canonical FID
    #   "torchmetrics[image]>=1.3", # FID, KID, CLIP score
    #   "lpips>=0.1.4",
    #
    # LLM evaluation:
    #   "lm-eval>=0.4",             # EleutherAI lm-evaluation-harness
    #
    # MCMC / sampling:
    #   "arviz>=0.18",              # ESS, R-hat, MCMC diagnostics
    #   "POT>=0.9",                 # optimal transport (W2, etc.)
    #
    # Optimization / combinatorics:
    #   "networkx>=3.3",
    #   "scikit-learn>=1.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "anthropic>=0.96.0",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# uv manages the project-scoped virtual environment (.venv/).
# Run `uv sync` to install. Run scripts with `uv run python3 ...`.
# Add packages with `uv add <package>` — this updates pyproject.toml + uv.lock
# and the Modal image on next build.
